--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.StelarBank"
         tools:targetApi="31">
         <activity
+            android:name=".Inversiones"
+            android:exported="false" />
+        <activity
+            android:name=".Transferencias"
+            android:exported="false" />
+        <activity
+            android:name=".MiCuenta"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
